tests/NormalTests/paczka1/fuzzy1/23203180.err
Error in line 3: 4x55p7o7 A597 17,3
Error in line 4: jZpkqG24bk A877 94,6
Error in line 21: 6CxBqe7DD42 A877 129,4
